# procedural-terrain

./: .gitignore  CMakeLists.txt  README.md
saved_terrains/: DEFAULT.terrain  NIGHT.terrain  SUNNY.terrain  SUN_SET.terrain
src/: CMakeLists.txt
src/app/: constants.h  main.cpp  main.h  params.h
src/buffers/: CMakeLists.txt  copybuffer.cpp  copybuffer.h  generalbuffer.cpp  generalbuffer.h
src/camera/: bezier.cpp  bezier.h  bezier_curve.h  camera.cpp  camera.h  point.h
src/noise/: quad.cpp  quad.h  quad_copy_fshader.glsl  quad_dirt_fshader.glsl  quad_grass_fshader.glsl  quad_grass_vshader.glsl  quad_noise_fshader.glsl  quad_noise_vshader.glsl  quad_sand_fshader.glsl  quad_snow_fshader.glsl  terrain.cpp  terrain.h
src/scene/: box.cpp  box.h  box_fshader.glsl  box_vshader.glsl  grid.cpp  grid.h  grid_fshader.glsl  grid_vshader.glsl  sky.cpp  sky.h  sky_fshader.glsl  sky_vshader.glsl  water.cpp  water.h  water_fshader.glsl  water_vshader.glsl
src/textures/skybox/lake/: XN.tga  XP.tga  YN.tga  YP.tga  ZN.tga  ZP.tga
src/textures/skybox/sea/: XN.tga  XP.tga  YN.tga  YP.tga  ZN.tga  ZP.tga
src/textures/skybox/sunset/: YP.tga
src/textures/terrains/mountain/: tex_grass.tga
src/textures/water/: tex_normal_map_water.tga
src/tw/: io.cpp  io.h  tweakbar.cpp  tweakbar.h
